--- a/index.html
+++ b/index.html
@@ -156,35 +156,47 @@
                         in donuts cooking! 
                     </p>
                 </div>
-                <div class="program__images-list">
-                    <img class="program__image program__images-list-item" src="" alt="" width="289px" height="289px">
-                    <img class="program__image program__images-list-item" src="" alt="" width="289px" height="289px">
-                    <img class="program__image program__images-list-item" src="" alt="" width="289px" height="289px">
-                    <img class="program__image program__images-list-item" src="" alt="" width="289px" height="289px">
-                </div>
+                <ul class="program__images-list">
+                    <li class="program__images-list-item circle">
+                            <h4 class="program__images-list-item-title">Type of the event</h4>
+                        <h5 class="program__images-list-item-subtitle">Cooking classes</h5>
+                    </li>
+                    <li class="program__images-list-item circle">
+                        <h4 class="program__images-list-item-title">Number of guests</h4>
+                        <h5 class="program__images-list-item-subtitle">1 to 20</h5>
+                    </li>
+                    <li class="program__images-list-item circle">
+                        <h4 class="program__images-list-item-title">Type of the event</h4>
+                        <h5 class="program__images-list-item-subtitle">18:30 (2.5 hours)</h5>
+                    </li>
+                    <li class="program__images-list-item circle">
+                        <h4 class="program__images-list-item-title">The host speaks</h4>
+                        <h5 class="program__images-list-item-subtitle">English, French</h5>
+                    </li>
+                </ul>
             </div>
         </section>
         <section class="speakers">
             <div class="speakers__inner container">
                 <h2 class="speakers__main-title main-title title">Speakers</h2>
                 <ul class="speakers__list list">
-                    <li class="speakers__list-item">
-                        <!-- <img class="speakers__list-image" src="" alt="">     -->
+                    <li class="speakers__list-item list-item">
+                        <div class="speakers__list-item-top"></div>  
                         <h5 class="speakers__name">Molly Rivera</h5>
                         <p class="speakers__paragraph paragraph">Pastry chef, master chocolatier of Spain,</p>
                     </li>
-                    <li class="speakers__list-item">
-                        <!-- <img class="speakers__list-image" src="" alt="">     -->
+                    <li class="speakers__list-item list-item">
+                        <div class="speakers__list-item-top"></div>   
                         <h5 class="speakers__name">Sophia Clark</h5>
                         <p class="speakers__paragraph paragraph">Сulinary school pastry chef</p>
                     </li>
-                    <li class="speakers__list-item">
-                        <!-- <img class="speakers__list-image" src="" alt="">     -->
+                    <li class="speakers__list-item list-item">
+                        <div class="speakers__list-item-top"></div>     
                         <h5 class="speakers__name">Isabella Taylor</h5>
                         <p class="speakers__paragraph paragraph">Сonsultant in the art of confectionery</p>
                     </li>
-                    <li class="speakers__list-item">
-                        <!-- <img class="speakers__list-image" src="" alt=""> -->
+                    <li class="speakers__list-item list-item">
+                        <div class="speakers__list-item-top"></div>  
                         <h5 class="speakers__name">Evelyn Miller</h5>
                         <p class="speakers__paragraph paragraph">Master- hocolatier in Spain</p>
                     </li>
@@ -287,12 +299,60 @@
                 </ul>
             </div>
         </section>
+        <section class="reviews">
+            <div class="reviews__inner container">
+                <h2 class="reviews__main-title main-title title">Reviews</h2>
+                <ul class="reviews__list">
+                    <li class="reviews__list-item hidden-tablet">
+                        <img class="reviews__list-image circle" src="/img/John.png" alt="John" width="285px" height="285px">
+                        <div class="reviews__star-list">
+                            <img src="/img/icons/star.svg" alt="star">
+                            <img src="/img/icons/star.svg" alt="star">
+                            <img src="/img/icons/star.svg" alt="star">
+                            <img src="/img/icons/star.svg" alt="star">
+                            <img src="/img/icons/star.svg" alt="star">
+                        </div>
+                        <h4 class="reviews__list-title">John</h4>
+                    </li>
+                    <li class="reviews__list-item">
+                        <img class="reviews__list-image circle" src="/img/Will.png" alt="Will" width="394px" height="394px">
+                        <div class="reviews__star-list">
+                            <img src="/img/icons/star.svg" alt="star">
+                            <img src="/img/icons/star.svg" alt="star">
+                            <img src="/img/icons/star.svg" alt="star">
+                            <img src="/img/icons/star.svg" alt="star">
+                            <img src="/img/icons/star.svg" alt="star">
+                        </div>
+                        <h4 class="reviews__list-title">Will</h4>
+                    </li>
+                    <li class="reviews__list-item hidden-tablet">
+                        <img class="reviews__list-image circle" src="/img/Elisabeth.png" alt="Elisabeth" width="288px" height="288px">
+                        <div class="reviews__star-list">
+                            <img src="/img/icons/star.svg" alt="star">
+                            <img src="/img/icons/star.svg" alt="star">
+                            <img src="/img/icons/star.svg" alt="star">
+                            <img src="/img/icons/star.svg" alt="star">
+                            <img src="/img/icons/star.svg" alt="star">
+                        </div>
+                        <h4 class="reviews__list-title">Elisabeth</h4>
+                    </li>
+                </ul>
+                <p class="reviews__paragraph paragraph">
+                    Last time I have visited a cooking course by Eva <br>
+                    I was impressed with the way she explained everything <br>
+                    to people. You can be sure you will manage to cook a delicious dish even if it is your first time in the kitchen! <br>
+                    Thank you so much for the masterclass! Looking forward to the next one and highly recommend it to everyone!
+                </p>
+                <p class="reviews__nav">2/15</p>
+            </div>
+        </section>
         <section class="registration">
             <div class="registration__inner container">
                 <h2 class="registration__main-title main-title title">Registration</h2>
                 <div class="registration__card">
-                    <img class="registration__svg" src="/img/registration-background.svg" alt="">
-                    <img class="registration__image" src="/img/3-donnut.png" alt="" width="200px" height="133px">
+                    <img class="registration__svg hidden-desktop" src="/img/registration-background.svg" alt="">
+                    <img class="registration__svg hidden-tablet" src="/img/registration-background-tablet.svg" alt="">
+                    <img class="registration__image hidden-tablet" src="/img/3-donnut.png" alt="" width="200px" height="133px">
                     <h3 class="registration__time">May 23, 11:00 New York</h3>
                     <div class="registration__form">
                         <h3 class="registration__form-title">Apply your personal info for registration </h3>
@@ -304,7 +364,30 @@
                 </div>
             </div>
         </section>
+        <section class="contact">
+            <div class="contact__inner container">
+                <h2 class="contact__main-title main-title title">Contact</h2>
+                <p class="contact__subtitle subtitle">We will answer any question!</p>
+                <div class="contact__input-list">
+                    <input class="contact__input input" type="text" placeholder="Email">
+                    <input class="contact__input input" type="text" placeholder="Type your question">
+                </div>
+                <button class="contact__button button">Send</button>
+                <ul class="contact__icon-list">
+                    <li class="contact__list-item"><img class="contact__list-image" src="/img/icons/twitter.svg" alt="twitter"></li>
+                    <li class="contact__list-item"><img class="contact__list-image" src="/img/icons/instagram.svg" alt="instagram"></li>
+                    <li class="contact__list-item"><img class="contact__list-image" src="img/icons/facebook.svg" alt="facebook"></li>
+                </ul>
+            </div>
+        </section>
     </main>
+    <footer class="footer">
+        <div class="footer__inner container">
+            <p class="footer__paragraph paragraph">(910)222-8855</p>
+            <p class="footer__paragraph paragraph">New York</p>
+        </div>
+        <img class="footer__image visible-mobile" src="/img/2 donnut.png" alt="">
+    </footer>
     <script src="/js/script.js"></script>
 </body>
 </html>
