--- a/index.html
+++ b/index.html
@@ -181,22 +181,30 @@
                 <h2 class="speakers__main-title main-title title">Speakers</h2>
                 <ul class="speakers__list list">
                     <li class="speakers__list-item list-item">
-                        <div class="speakers__list-item-top"></div>  
+                        <div class="speakers__list-item-top">
+                            <img class="speakers__list-item-image" src="/img/speakers/person1.png" alt="">
+                        </div>  
                         <h5 class="speakers__name">Molly Rivera</h5>
                         <p class="speakers__paragraph paragraph">Pastry chef, master chocolatier of Spain,</p>
                     </li>
                     <li class="speakers__list-item list-item">
-                        <div class="speakers__list-item-top"></div>   
+                        <div class="speakers__list-item-top">
+                            <img src="/img/speakers/person2.png" alt="">
+                        </div>   
                         <h5 class="speakers__name">Sophia Clark</h5>
                         <p class="speakers__paragraph paragraph">Сulinary school pastry chef</p>
                     </li>
                     <li class="speakers__list-item list-item">
-                        <div class="speakers__list-item-top"></div>     
+                        <div class="speakers__list-item-top">
+                            <img src="/img/speakers/person3.png" alt="">
+                        </div>     
                         <h5 class="speakers__name">Isabella Taylor</h5>
                         <p class="speakers__paragraph paragraph">Сonsultant in the art of confectionery</p>
                     </li>
                     <li class="speakers__list-item list-item">
-                        <div class="speakers__list-item-top"></div>  
+                        <div class="speakers__list-item-top">
+                            <img src="/img/speakers/person4.png" alt="">
+                        </div>  
                         <h5 class="speakers__name">Evelyn Miller</h5>
                         <p class="speakers__paragraph paragraph">Master- hocolatier in Spain</p>
                     </li>
